# SGLDHelper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/sgldhelper-ai-tools/: SKILL.md
.claude/skills/sgldhelper-architecture/: SKILL.md
.claude/skills/sgldhelper-testing/: SKILL.md
src/sgldhelper/: __init__.py  __main__.py  config.py
src/sgldhelper/ai/: __init__.py  classifier.py  client.py  conversation.py  stall_detector.py  summaries.py  tools.py
src/sgldhelper/ci/: auto_merge.py  code_quality.py  health_check.py  monitor.py  tracked_pr_summary.py
src/sgldhelper/db/: engine.py  models.py  queries.py
src/sgldhelper/github/: ci_analyzer.py  ci_rerunner.py  client.py  issue_tracker.py  poller.py  pr_tracker.py
src/sgldhelper/notifications/: ci_events.py  dispatcher.py  feature_events.py  pr_events.py
src/sgldhelper/slack/: app.py  channels.py  handlers.py  messages.py
src/sgldhelper/utils/: logging_setup.py  rate_limiter.py
tests/: conftest.py  test_ai_tools.py  test_auto_merge.py  test_ci_analyzer.py  test_ci_monitor.py  test_ci_rerunner.py  test_classifier.py  test_code_quality.py  test_conversation.py  test_github_search.py  test_health_check.py  test_pr_tracker.py  test_slack_messages.py  test_stall_detector.py
tests/fixtures/: issue_roadmap.json  pr_files_diffusion.json  pr_files_other.json  pr_list.json  workflow_jobs.json  workflow_runs.json
