[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sgldhelper"
version = "0.1.0"
description = "SGLang Diffusion Helper - automated PR tracking, CI monitoring, and feature progress for SGLang's diffusion subsystem"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.18",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[project.scripts]
sgldhelper = "sgldhelper.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sgldhelper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
